fix scrollbar color

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
 } */
 
 ::-webkit-scrollbar {
-    width: 8px;
+    width: 5px;
     background-color: #fff;
 }
 
